<resources>
    <string name="app_name">Crypto Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search_currency">Search Currency</string>


    <string name="back">Back</string>
    <string name="enter_the_receiver_address">Enter the receiver address</string>
    <string name="enter_amount_of_eth_to_send">Enter amount of ETH to send</string>
    <string name="send_eth_to_an_address">Send ETH to an address!</string>
    <string name="make_a_transaction">Make a transaction!</string>
    <string name="show_eth_balance">Show ETH Balance</string>
    <string name="confirm_transaction">Confirm Transaction</string>
    <string name="name">Name</string>
    <string name="symbol">Symbol</string>
    <string name="_123456">123456</string>
    <string name="_123">123</string>
    <string name="send">Send</string>
    <string name="input">Input</string>
    <string name="chat">Chat</string>
    <string name="time">Time</string>
    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="max">Max</string>
    <string name="fullname">FullName</string>
    <string name="symbol1">symbol</string>
    <string name="price_usd">Price USD:</string>
    <string name="price">price</string>
    <string name="marketcap">Marketcap:</string>
    <string name="marketcap1">marketcap</string>
    <string name="volume_24h">Volume 24h:</string>
    <string name="volume24h">volume24h</string>
    <string name="supply">supply</string>

</resources>