<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_1">

    <ProgressBar
        android:id="@+id/trx_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="94dp" />

    <EditText
        android:id="@+id/edt_receiverAddy"
        android:layout_width="380dp"
        android:layout_height="61dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="169dp"
        android:hint="@string/enter_the_receiver_address"
        android:textColorHint="#FDFCFC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="551dp" />

    <EditText
        android:id="@+id/edt_eth_to_send"
        android:layout_width="380dp"
        android:layout_height="61dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="257dp"
        android:hint="@string/enter_amount_of_eth_to_send"
        android:textColorHint="#FDFCFC"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="551dp" />

    <TextView
        android:layout_width="386dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="334dp"
        android:text="@string/send_eth_to_an_address"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#8E75BA"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="430dp" />

    <TextView
        android:layout_width="272dp"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="66dp"
        android:layout_marginTop="20dp"
        android:text="@string/make_a_transaction"
        android:textAlignment="center"
        android:textColor="#8E75BA"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="42dp" />

    <TextView
        android:id="@+id/textView_connected_to"
        android:layout_width="392dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="9dp"
        android:textAlignment="center"
        android:textColor="#8E75BA"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="42dp" />

    <TextView
        android:id="@+id/tv_showAccountBalance"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="229dp"
        android:layout_marginEnd="0dp"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />

    <Button
        android:id="@+id/btn_getBalanceAcc"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="104dp"
        android:layout_marginTop="162dp"
        android:background="#67489F"
        android:backgroundTint="#FDEDED"
        android:text="@string/show_eth_balance"
        app:iconTint="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="307dp" />

    <Button
        android:id="@+id/btn_connectWalletFromJson"
        android:layout_width="167dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="580dp"
        android:background="#67489F"
        android:backgroundTint="#FDEDED"
        android:text="@string/confirm_transaction"
        app:iconTint="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="639dp" />

</RelativeLayout>